<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="alert">Alert</string>
    <string name="settings">Settings</string>
    <string name="get_started">GET STARTED</string>
    <string name="homeFrag">Home</string>
    <string name="today">Today</string>
    <string name="date">-</string>
    <string name="time">-</string>
    <string name="city">-</string>
    <string name="tomorrow">"Tomorrow"</string>
    <string name="temperature">-</string>
    <string name="o">o</string>
    <string name="c">°C</string>
    <string name="cloudy">Cloudy</string>
    <string name="percentage">%</string>
    <string name="humidity">Humidity</string>
    <string name="wind_value">1000</string>
    <string name="humidity_value">100</string>
    <string name="wind_unit">m/sec</string>
    <string name="wind">Wind</string>
    <string name="pressure_value">1000</string>
    <string name="pressure_unit">hpa</string>
    <string name="pressure">Pressure</string>
    <string name="cloud_value">5</string>
    <string name="cloud_unit">%</string>
    <string name="cloud">Cloud</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="am">3 am</string>
    <string name="day">Friday</string>
    <string name="desc_text">clear sky</string>
    <string name="date_day">15/3/2024</string>
    <string name="temp_text">16/18</string>
    <string name="fav_city">Alexandria</string>
    <string name="fav_temp">20</string>
    <string name="start_date_text">17 Mar</string>
    <string name="end_date_text">31 Mar</string>
    <string name="start_time_text">00:00</string>
    <string name="end_start_text">01:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="General">General</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="units">Units</string>
    <string name="temp_text_settings">Temperature</string>
    <string name="wind_text_setting">Wind Speed</string>
    <string name="lang_hint">English</string>
    <string name="loc_hint">Location</string>
    <string name="temp_hint">Temperature</string>
    <string name="wind_hint">Speed</string>
    <string name="new_alert">New Alert</string>
    <string name="start_date">Start Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="empty_dialog_date">-/-/-</string>
    <string name="dialog_alarm">Alarm</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="empty_dialog_time">-:-</string>
    <string name="set_alarm">Alarm</string>
    <string name="dismiss">Dismiss</string>
    <string name="alert_message">Alert Message</string>
    <string name="alert_title">Alert Title</string>
</resources>