<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home.View.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        <VideoView-->
<!--            android:id="@+id/home_video"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            />-->

        <View
            android:id="@+id/home_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bg_view_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textSize="@dimen/big_header_text"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/very_small_text"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="70dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/today"
            />
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="@dimen/very_small_text"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="70dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/today"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textSize="@dimen/big_header_text"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            />

        <LinearLayout
            android:id="@+id/temperature_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city"
            >
        <TextView
            android:id="@+id/temperature_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="@dimen/very_big_header_text"
            android:layout_gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:gravity="end"
            android:layout_weight="13"
            />
            <TextView
                android:id="@+id/degree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/o"
                android:textSize="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginBottom="60dp"
                />

            <TextView
                android:id="@+id/temperature_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textSize="60sp"
                android:layout_weight="5"
                android:layout_marginTop="20dp"
                >

            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/weather_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cloudy"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/big_header_text"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature_layout"
            />

        <FrameLayout
            android:id="@+id/widgets"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/card_shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/weather_status"
            >

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:rowCount="2"
                android:columnCount="2"
                >

                <LinearLayout
                    android:layout_width="@dimen/width_widget"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_marginTop="28dp"
                    android:layout_marginStart="28dp"
                    android:background="@drawable/card_shape"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:weightSum="6"
                    android:padding="@dimen/padding_widget"
                    >
                    <ImageView
                    android:id="@+id/humidity_img"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:src="@drawable/alert_vector"
                    android:layout_weight="2"
                    />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="horizontal"
                        android:layout_weight="2"
                        android:weightSum="8"
                        >
                        <TextView
                            android:id="@+id/humidity_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:textSize="14sp"
                            android:text="@string/humidity_value"
                            android:gravity="end" />
                        <TextView
                            android:id="@+id/humidity_unit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:textSize="14sp"
                            android:paddingLeft="@dimen/small_padding"
                            android:text="@string/percentage"
                            android:gravity="start" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/humidity_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/humidity"
                        android:gravity="center"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/width_widget"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/card_shape"
                    android:layout_marginTop="28dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:weightSum="6"
                    android:padding="@dimen/padding_widget"
                    >
                    <ImageView
                        android:id="@+id/wind_img"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:src="@drawable/alert_vector"
                        android:layout_weight="2" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="horizontal"
                        android:layout_weight="2"
                        android:weightSum="8"
                        >
                        <TextView
                            android:id="@+id/wind_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:textSize="14sp"
                            android:text="@string/wind_value"
                            android:gravity="end" />
                        <TextView
                            android:id="@+id/wind_unit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:textSize="14sp"
                            android:text="@string/wind_unit"
                            android:paddingLeft="@dimen/small_padding"
                            android:gravity="start" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/wind_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/wind"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/width_widget"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:layout_marginStart="28dp"
                    android:background="@drawable/card_shape"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:weightSum="6"
                    android:padding="@dimen/padding_widget"
                    >
                    <ImageView
                        android:id="@+id/pressure_img"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:src="@drawable/alert_vector"
                        android:layout_weight="2" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="horizontal"
                        android:layout_weight="2"
                        android:weightSum="8"
                        >
                        <TextView
                            android:id="@+id/pressure_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:textSize="14sp"
                            android:text="@string/pressure_value"
                            android:gravity="end" />
                        <TextView
                            android:id="@+id/pressure_unit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:textSize="14sp"
                            android:paddingLeft="@dimen/small_padding"
                            android:text="@string/pressure_unit"
                            android:gravity="start" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/pressure_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/pressure"
                        android:gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/width_widget"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    android:background="@drawable/card_shape"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:weightSum="6"
                    android:padding="@dimen/padding_widget"
                    >
                    <ImageView
                        android:id="@+id/cloud_img"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:src="@drawable/alert_vector"
                        android:layout_weight="2" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:orientation="horizontal"
                        android:layout_weight="2"
                        android:weightSum="8"
                        >
                        <TextView
                            android:id="@+id/cloud_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:textSize="14sp"
                            android:text="@string/cloud_value"
                            android:gravity="end" />
                        <TextView
                            android:id="@+id/cloud_unit"                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:textSize="14sp"
                            android:text="@string/cloud_unit"
                            android:paddingLeft="@dimen/small_padding"
                            android:gravity="start" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/cloud_text"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="2"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:text="@string/cloud"
                        android:gravity="center" />
                </LinearLayout>
            </GridLayout>
        </FrameLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/widgets">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hourly_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/week_status"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>





</ScrollView>