<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="16dp"
    android:layout_margin="20dp"
    >


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="50"
        android:padding="20dp"
        >

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_alert"
            android:textColor="@color/black"
            android:textSize="@dimen/big_header_text"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/dialog_start_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/start_date"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/dialog_start_time_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/start_time"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/dialog_start_date_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty_dialog_date"
                android:textSize="@dimen/small_text"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                />

            <TextView
                android:id="@+id/dialog_start_time_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty_dialog_time"
                android:textSize="@dimen/small_text"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/dialog_end_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/end_date"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                />

            <TextView
                android:id="@+id/dialog_end_time_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/end_time"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold"
                android:layout_weight="1"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:weightSum="2"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/dialog_end_date_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty_dialog_date"
                android:textSize="@dimen/small_text"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                />

            <TextView
                android:id="@+id/dialog_end_time_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/empty_dialog_time"
                android:textSize="@dimen/small_text"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                />
        </LinearLayout>


<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="2"-->
<!--            android:weightSum="2"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_marginTop="20dp"-->
<!--            >-->

<!--            <TextView-->
<!--                android:id="@+id/dialog_alarm_text"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/dialog_alarm"-->
<!--                android:textSize="@dimen/medium_text_size"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:layout_gravity="center"-->
<!--                />-->

<!--            <Switch-->
<!--                android:id="@+id/dialog_alarm_switch"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:gravity="center"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginEnd="30dp"-->
<!--                tools:ignore="UseSwitchCompatOrMaterialXml" />-->
<!--        </LinearLayout>-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <Button
                android:id="@+id/dialog_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="#1A454749"
                android:gravity="center"
                android:text="@string/dialog_cancel"
                android:textColor="#6750A3"
                android:textSize="@dimen/small_text"
                />

            <Button
                android:id="@+id/dialog_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_ok"
                android:textSize="@dimen/small_text"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />
        </LinearLayout>









    </LinearLayout>
</androidx.cardview.widget.CardView>