<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="16dp"
    app:cardElevation="16dp"
    android:layout_margin="20dp"
    >


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:background="@color/black"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="12"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="4">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:gravity="start"
                android:padding="@dimen/small_padding"
                android:scaleType="fitCenter"
                android:src="@drawable/app"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/event_alarm_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/alert_title"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18sp" />


        </LinearLayout>


        <TextView
            android:id="@+id/desc_alarm_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_weight="5"
            android:gravity="start|top"
            android:text="@string/alert_message"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dismiss_btn"
            android:layout_width="200dp"
            android:layout_height="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_weight="3"
            android:textColor="@color/white"
            android:backgroundTint="#80FF0000"
            android:text="@string/dismiss" />

    </LinearLayout>
</androidx.cardview.widget.CardView>